fix(css): remove bottom spacing from .m-label
Remove the --label-spacing-bottom variable and the &:not(:last-child) margin-bottom rule from .m-label. This stops automatic bottom margins on label elements so spacing can be managed by parent/layout components and removes an unused CSS variable.

--- a/packages/css/src/components/label.css
+++ b/packages/css/src/components/label.css
@@ -1,19 +1,13 @@
 .m-label {
   --label-display: block;
   --label-font-weight: var(--font-weight-medium);
-  --label-spacing-bottom: var(--spacing-1);
   --label-required-icon-content: "*";
   --label-required-icon-size: 1em;
   --label-required-icon-color: var(--color-danger);
   --label-disabled-opacity: 0.6;
 
-
   display: var(--label-display);
   font-weight: var(--label-font-weight);
-
-  &:not(:last-child) {
-    margin-bottom: var(--label-spacing-bottom);
-  }
 
   &.--disabled {
     opacity: var(--label-disabled-opacity);
